tests/error/function_alias_self.bz
// error: circular dependency encountered while resolving alias 'function alias'
// note: required from instantiation of alias 'function alias'
function alias = alias;
